# doro

./: .coverage  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: pylint.yml
src/doro/: app.py  hallo.py
tests/: test_hallo.py
